[package]
name = "arp_scan_rust"
version = "0.1.0"
edition = "2021"
authors = ["Andrew <dr.chrom@gmai.com>"]
description = "A tool to scan for devices on a local network using ARP"
license = "MIT"
readme = "README.md"
repository = "https://github.com/chrom/arp_scan_rust/"
keywords = ["network", "arp", "scan", "rust"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI tools
clap = { version = "4.4.11", features = ["derive"] }
termcolor = "1.4.0"

# OS support
nix = "0.26.4"
os-version = "0.2.0"

# Networking
interfaces = "0.0.9"
ipnetwork = "0.20.0"
pnet = "0.34.0"
exitcode = "1.1.2"

mockers = "0.23.0"

[dev-dependencies]
# Testing
mockall = "0.12.0"
quickcheck_macros = "1.0.0"
quickcheck = "1.0.3"

# Project support tools
cargo-check-external-types = "0.1.10"
cargo-semver-checks = "0.25.0"